# H-Assist

./: .gitignore  main.py  pyproject.toml  requirements.txt
.github/workflows/: basic-action.yml
envs/: api.env.demo  misc.env.demo
v1/: validtors.py
v1/applications/RTRanking/: __init__.py  competitor_crud.py  models.py  race_crud.py  schemas.py
v1/applications/security/: __init__.py  schemas.py  user_security.py
v1/applications/user/: __init__.py  models.py  schemas.py  user_crud.py
v1/core/: __init__.py  config.py  dependencies.py  settings.py  utilities.py
v1/core/bases/: models.py
v1/envs/: db.env  security.env  server.env
v1/routers/: auth.py  root.py  rt_rating.py  users.py
